Bug 1897303 - Remove folders from the folder cache on account removal. r=heather

Differential Revision: https://phabricator.services.mozilla.com/D244890

--HG--
extra : moz-landing-system : lando